[package]
name = "rtest"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "*", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.24.0"
bevy_rapier2d = { version = "*", features = [ "simd-stable", "debug-render-2d" ] }


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"
